--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <h3>Skills</h3>
                     <ul>
                         <li>HTML5, CSS3, JavaScript</li>
-                        <li>React, Node.js</li>
-                        <li>UI/UX Design</li>
+                        <li>React, Node.js, Express.js</li>
+                        <li>MongoDB, MySQL</li>
                         <li>Responsive Web Design</li>
                     </ul>
                 </div>
